# graphics-course-practice

./: .clang-format  .gitignore
homework1/: CMakeLists.txt
homework1/include/: gl.h  grid.h  perlin.h  vertex_buffer.h  window.h
homework1/src/: gl.cpp  grid.cpp  main.cpp  perlin.cpp  window.cpp
homework2/: .gitignore  CMakeLists.txt
homework2/include/: camera.h  gl.h  mouse.h  obj_loader.h
homework2/src/: camera.cpp  gl.cpp  main.cpp  mouse.cpp  obj_loader.cpp  window.cpp
homework2/src/shaders/: debug.frag  debug.vert  main.frag  main.vert  shadow.vert
practice10/: main.cpp
practice11/: main.cpp
practice2/: main.cpp
practice4/: main.cpp
practice5/: main.cpp
practice6/: main.cpp  obj_parser.hpp
practice7/: main.cpp
practice9/: main.cpp
